--- a/appShare/views/room.ejs
+++ b/appShare/views/room.ejs
@@ -8,8 +8,8 @@
   <body>
     <h1>RoomID :<%= roomID %></h1>
     <div id="videos">
-      <video id="localVideo" autoplay muted playsinline></video>
-      <video id="remoteVideo" autoplay playsinline></video>
+      <video id="localVideo" autoplay muted playsinline controls></video>
+      <video id="remoteVideo" autoplay playsinline controls></video>
     </div>
 
     <!-- This file is automatically added/served when running "node index.js". -->
