--- a/appShare/views/room.ejs
+++ b/appShare/views/room.ejs
@@ -7,6 +7,7 @@
 
   <body>
     <h1>RoomID :<%= roomID %></h1>
+    <button id="btnHome" style="margin: 10px">home</button>
     <div id="videos">
       <video id="localVideo" autoplay muted playsinline controls></video>
       <video id="remoteVideo" autoplay playsinline controls></video>
